# intercept-bounce

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  build.rs  dev.sh  flake.nix
.github/workflows/: ci.yml
benches/: filter.rs
docs/completions/: intercept-bounce.bash  intercept-bounce.elv  intercept-bounce.fish  intercept-bounce.nu  intercept-bounce.ps1  intercept-bounce.zsh
docs/man/: intercept-bounce.1
examples/: udevmon.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_core_filter.rs  fuzz_target_1.rs  fuzz_target_stats.rs
nix/modules/: intercept-bounce.nix
src/: cli.rs  config.rs  event.rs  filter.rs  lib.rs  logger.rs  main.rs  telemetry.rs  util.rs
src/filter/: keynames.rs  stats.rs  tests.rs
test-helpers/: Cargo.toml
test-helpers/src/: lib.rs
tests/: filter_stats.rs  filter_tests.rs  property_tests.proptest-regressions  property_tests.rs  sanity.rs  unit_stats.rs
tests/common/: mod.rs
tools/: simple_pipe.c  simple_pipe_rust.rs
xtask/: Cargo.toml
xtask/src/: main.rs
