[package]
name = "intercept-bounce"
version = "0.6.0"
edition = "2021"
authors = ["sinity <ezo.dev@gmail.com>"]
description = "An Interception Tools filter to eliminate keyboard chatter (switch bounce)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sinity/intercept-bounce"
keywords = ["interception", "keyboard", "debounce", "evdev"]
categories = ["command-line-utilities"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["default"]

[dependencies]
clap            = { version = "4.5", features = ["derive"] }
input-linux-sys = "0.1"
signal-hook     = "0.3"
phf             = { version = "0.11", features = ["macros"] }
libc            = "0.2"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
chrono          = "0.4"
crossbeam-channel = "0.5"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
humantime       = "2.1"
clap_complete = "4.5"
clap_mangen = "0.2"

# --- OpenTelemetry Dependencies ---
opentelemetry = { version = "0.23", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio-current-thread", "metrics"] } # Using tokio-current-thread runtime
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic", "metrics"] }
tracing-opentelemetry = "0.24"

[features]
default = [] # Keep default features empty or list non-optional ones
debug_ring_buffer = [] # Add this line
# Remove 'otel' feature block

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] } # For version/git info
clap = { version = "4.5", features = ["derive"] } # Needed for accessing Args in build script/binary
clap_complete = "4.5"
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"
proptest = "1.0" # Added for property testing
arbitrary = { version = "1.0", features = ["derive"] } # Added for fuzzing
libfuzzer-sys = "0.4" # Added for fuzzing
fastrand = "2.0" # Added for property testing strategy

[[bench]]
name     = "filter"
harness  = false

# Binary target for generating completions and man pages
[[bin]]
name = "generate-cli-files"
path = "src/bin/generate_cli_files.rs"
required-features = [] # Does not require any special features
