[package]
name = "intercept-bounce"
version = "0.9.0"
edition = "2021"
authors = ["sinity <ezo.dev@gmail.com>"]
description = "An Interception Tools filter to eliminate keyboard chatter (switch bounce)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sinity/intercept-bounce"
keywords = ["interception", "keyboard", "debounce", "evdev"]
categories = ["command-line-utilities"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["default"]

[dependencies]
input-linux-sys = "0.9"
signal-hook = "0.3"
phf = { version = "0.11", features = ["macros"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
humantime = "2.1"
clap = { version = "4.5", features = ["derive"] }

# --- OpenTelemetry Dependencies ---
opentelemetry = { version = "0.23", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23", features = [
  "rt-tokio-current-thread",
  "metrics",
] }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic", "metrics"] }
tracing-opentelemetry = "0.24"

[features]
default = ["clap"]
clap = []

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"
proptest = "1.0"
test-helpers = { path = "test-helpers" }

[[bench]]
name = "filter"
harness = false

[workspace]
members = [".", "xtask", "fuzz", "test-helpers"]
