[package]
name = "intercept-bounce-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
input-linux-sys = "0.1"
arbitrary = { version = "1.0", features = ["derive"] } # Added for fuzzing

[dependencies.intercept-bounce]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_stats"
path = "fuzz_targets/fuzz_target_stats.rs"
test = false
doc = false
bench = false
