[package]
name = "test-helpers"
version = "0.6.0"
edition = "2021"
authors = ["sinity <ezo.dev@gmail.com>"]
description = "Common functions for tests"
license = "MIT OR Apache-2.0"
keywords = ["interception", "keyboard", "debounce", "evdev"]

[dev-dependencies]
intersect-bounce = ??

input-linux-sys = "0.1"
