[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
intercept-bounce = { path = "..", features = ["default"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
clap_mangen = "0.2"
clap_complete_nushell = "4.5.5"
anyhow = "1.0"
chrono = "0.4"
